tdf#102479 ODF export: ignore exceptions when checking shape text

The bugdoc contains a SwXShape-SwXTextFrame aggregate which contains
only a table, no top-level paragraph.  Because of that,
SwXTextFrame::createTextCursor() throws a RuntimeException.

Assuming that the exception itself is intentional, work around it
in XMLShapeExport::collectShapeAutoStyles() and assume that the
getString() check that was added there in commit
73fcb052edf1a21d785583bc53e8b4323b577bb1 is just a performance
optimization; the actual export of auto styles and content uses
XEnumerationAccess anyway.

Change-Id: I7c23164b1e692ce16e5b4e03dd945e46768677de
Reviewed-on: https://gerrit.libreoffice.org/31218
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 7661bbbaef31adfdb298b1447301b24a70f85834)
Reviewed-on: https://gerrit.libreoffice.org/31378
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>